# weather

./: .build.yml  .gitignore  .gitlab-ci.yml  Cargo.toml  README.md
assets/: Graph.json
src/: app.rs  color.rs  config.rs  error.rs  graph.rs  lib.rs  local.rs  main.rs
src/graph/: font.rs  mod.rs
