[package]
name = "weather"
version = "0.1.0"
authors = ["Matthew Klein <mklein994@gmail.com>"]
edition = "2018"

[dependencies]
ansi_term = "0.11.0"
chrono = "0.4.6"
clap = { version = "2.32.0", features = ["wrap_help"] }
dirs = "1.0.4"
env_logger = "0.6.0"
lazy_static = "1.2.0"
log = "0.4.6"
reqwest = "0.9.5"
serde = "1.0.80"
serde_json = "1.0.33"
serde_derive = "1.0.80"
toml = "0.4.10"
weather_icons = { git = "https://github.com/mklein994/weather_icons" }

[dependencies.darksky]
# version = ">0.8.1"
features = ["reqwest"]
git = "https://github.com/zeyla/darksky.rs"
# TODO: change this to the latest stable version > 0.8.1
rev = "12685a4e"
default-features = false
