[package]
name = "weather"
version = "0.1.0"
authors = ["Matthew Klein <mklein994@gmail.com>"]
edition = "2018"

[dependencies]
ansi_term = "0.12.0"
chrono = "0.4.6"
clap = { version = "2.32.0", features = ["wrap_help"] }
dirs = "2.0.1"
env_logger = "0.7.0"
lazy_static = "1.2.0"
log = "0.4.6"
reqwest = "0.9.17"
serde = "1.0.92"
serde_json = "1.0.33"
serde_derive = "1.0.80"
toml = "0.5.1"
weather_icons = { git = "https://github.com/mklein994/weather_icons" }

[dependencies.darksky]
# version = ">0.8.1"
features = ["reqwest"]
git = "https://github.com/mklein994/darksky.rs"
# TODO: change this to the latest stable version > 0.8.1, which includes the
# necessary version bump to openssl.
rev = "fb9a9d6"
default-features = false
